# django-referral

./: README.md  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_user_groups_user_is_superuser_user_last_login_and_more.py  0004_remove_user_invited_users_remove_user_referrer_code_and_more.py
dev_tools/: Dockerfile  docker-compose.yml
referral_project/: settings.py  urls.py
scripts/: automigrate.sh
